# tranfi

./: .gitignore  CMakeLists.txt  Makefile  README.md  index.html  package-lock.json  package.json  webpack.config.js
.githooks/: pre-commit
.github/workflows/: pages.yml
app/: index.html  package-lock.json  package.json  playwright.config.js  vite.config.js
app/public/wasm/: tranfi-runner.js  tranfi-viz.js
app/src/: App.vue  main.js
app/src/components/: DataPreview.vue  FileDropZone.vue  PipelineEditor.vue  StatsPanel.vue
app/src/components/blocks/: TfBlockAcf.vue  TfBlockAnomaly.vue  TfBlockBin.vue  TfBlockCast.vue  TfBlockClip.vue  TfBlockCsvDecode.vue  TfBlockCsvEncode.vue  TfBlockDatetime.vue  TfBlockDedup.vue  TfBlockDerive.vue  TfBlockDiff.vue  TfBlockEwma.vue  TfBlockExplode.vue  TfBlockFillDown.vue  TfBlockFillNull.vue  TfBlockFilter.vue  TfBlockFlatten.vue  TfBlockFrequency.vue  TfBlockGenericColumns.vue  TfBlockGenericN.vue  TfBlockGroupAgg.vue  TfBlockHash.vue  TfBlockHead.vue  TfBlockInterpolate.vue  TfBlockJoin.vue  TfBlockJsonlDecode.vue  TfBlockLabelEncode.vue  TfBlockNormalize.vue  TfBlockOnehot.vue  TfBlockRename.vue  TfBlockReorder.vue  TfBlockReplace.vue  TfBlockSample.vue  TfBlockSkip.vue  TfBlockSplit.vue  TfBlockSplitData.vue  TfBlockStats.vue  TfBlockStep.vue  TfBlockTail.vue  TfBlockTop.vue  (+5 more)
app/src/lib/: block-factory.js  block-types.js  compile-dsl.js  compile-schema.js  parse-dsl.js  tranfi-worker.js
app/src/lib/block-editor/: index.js
app/src/lib/block-editor/components/: BlockCard.vue  BlockInput.vue  BlockList.vue
app/src/lib/block-editor/composables/: useBlockList.js
app/test/: app.e2e.js  data.csv  e2e.spec.js  export-schema.json  exported.html  test_dsl_roundtrip.js
bench/: bench.c  bench_memory.js  bench_native_vs_wasm.js  bench_node.js  bench_wasm.js
js/: .npmignore  NOTICE  README.md  binding.gyp  napi_api.c  package-lock.json  package.json
js/scripts/: install-native.js  prepack.js  sync-csrc.js
js/src/: cli.js  index.js  native.js  pipeline.js  server.js  wasm.js
js/src/engines/: duckdb.js
js/wasm/: index.js  tranfi_core.js
py/: MANIFEST.in  README.md  pyproject.toml  setup.py
py/tranfi/: __init__.py  _ffi.py  _native.c  cli.py  pipeline.py
py/tranfi/engines/: __init__.py  duckdb_engine.py
scripts/: build-site.js  build-wasm.sh  release.sh
src/: app.css  app.js  app.vue  arena.c  batch.c  buffer.c  bulma-input.vue  codec_csv.c  codec_jsonl.c  codec_table.c  codec_text.c  common-inputs.js  compiler.c  date_utils.h  dsl.c  dsl.h  expr.c  expr.h  internal.h  ir.c  ir.h  ir_schema.c  ir_serialize.c  ir_sql.c  ir_validate.c  main.c  main.js  op_acf.c  op_anomaly.c  op_bin.c  op_cast.c  op_clip.c  op_date_trunc.c  op_datetime.c  op_derive.c  op_diff.c  op_ewma.c  op_explode.c  op_fill_down.c  op_fill_null.c  (+41 more)
test/: fuzz_csv.c  test_core.c  test_duckdb.py  test_node.js  test_parity.py  test_properties.py  test_python.py
test/fixtures/: sample.csv  sample.jsonl
