[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "tranfi"
version = "0.1.1"
description = "Streaming ETL language + runtime"
license = {text = "MIT"}
requires-python = ">=3.8"
keywords = ["etl", "csv", "streaming", "data", "pipeline", "transform"]
readme = "README.md"

[project.urls]
Repository = "https://github.com/tranfi/tranfi"

[tool.setuptools.packages.find]
include = ["tranfi*"]

[tool.setuptools.package-data]
tranfi = ["_native.c"]
